# IPEO-2025

./: .gitignore  COMBINED_IMBALANCE_LOSSES  README.md  class_imbalances.ipynb  environment.yml  generate_data.py  main.py  pyproject.toml  requirements.txt
notebooks/: baselines.ipynb  class_imbalances.ipynb  inference.ipynb  ssm_inference.ipynb
src/: exploration.ipynb  utils.py
src/models/baseline/: baselines.ipynb  decoder.py  encoder.py  models.py  training.py
src/models/ssm/: decoders.py  encoders.py  ssm.py
train/: hyperopt_ssm.sbatch  ssm_neat.py  train_classical.py  train_ssm.py  train_ssm.sbatch  tune_thresholds.py
